--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>pizza tower stats</title>
 </head>
 <body>
-  <div id="wrapper"></div>
+  <div id="wrapper">
+    <header>
+      <h1>pizza tower game progress & playtime</h1>
+    </header>
+  </div>
   <script src="d3.v7.min.js"></script>
   <script src="chart.js"></script>
 </body>
