Display data from alternate dataset

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id="wrapper">
     <header>
       <h1>pizza tower game progress & playtime</h1>
+      <a href="?data=alt_universe">alternate universe</a>
     </header>
   </div>
   <script src="d3.v7.min.js"></script>
