--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <div id="wrapper">
     <header>
       <h1>pizza tower game progress & playtime</h1>
-      <a href="?data=alt_universe">alternate universe</a>
+      <a href="/">save file 1</a>
+      <a href="?data=save_file_2">save file 2</a>
     </header>
   </div>
   <script src="d3.v7.min.js"></script>
