--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <title>pizza tower stats</title>
 </head>
 <body>
   <div id="wrapper">
     <header>
       <h1>pizza tower game progress & playtime</h1>
-      <a href="/">save file 1</a>
+      <a href="?data=save_file_1">save file 1</a>
       <a href="?data=save_file_2">save file 2</a>
     </header>
   </div>
