Add save file 3

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>pizza tower game progress & playtime</h1>
       <a href="?data=save_file_1">save file 1</a>
       <a href="?data=save_file_2">save file 2</a>
+      <a href="?data=save_file_3">save file 3</a>
     </header>
   </div>
   <script src="d3.v7.min.js"></script>
