--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <meta name="description" content="Pizza Tower game progress & playtime">
 </head>
 <body>
-  <div id="wrapper">
     <header>
-      <h1>pizza tower game progress & playtime</h1>
-      <a href="?data=save_file_1">save file 1</a>
-      <a href="?data=save_file_2">save file 2</a>
-      <a href="?data=save_file_3">save file 3</a>
+        <h1>pizza tower game progress & playtime</h1>
+        <a href="?data=save_file_1">save file 1</a>
+        <a href="?data=save_file_2">save file 2</a>
+        <a href="?data=save_file_3">save file 3</a>
     </header>
-  </div>
-  <script src="d3.v7.min.js"></script>
-  <script src="chart.js"></script>
+    <div id="wrapper"></div>
+    <script src="d3.v7.min.js"></script>
+    <script src="chart.js"></script>
 </body>
 </html>
