--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <title>pizza tower stats</title>
+  <link rel="icon" href="eye.gif" type="image/gif">
   <meta name="description" content="Pizza Tower game progress & playtime">
 </head>
 <body>
